Closing connection to prevent memory leak

--- a/src/main/java/com/nizar/todogamedevapp/todo.txt
+++ b/src/main/java/com/nizar/todogamedevapp/todo.txt
@@ -1,3 +1,5 @@
 CSS styling
+Ability of dragging notes to prioritize
+Save the same order of notes given by user dragging and not by alphabetical order
 
 
