--- a/src/main/java/com/nizar/todogamedevapp/todo.txt
+++ b/src/main/java/com/nizar/todogamedevapp/todo.txt
@@ -2,4 +2,9 @@ CSS styling
 Ability of dragging notes to prioritize
 Save the same order of notes given by user dragging and not by alphabetical order
 
+features would like to add:
+account authentication
+create project that contains its notes
+multiple projects
+
 
